crates/core-executor/src/tests/snapshots/query_create_database.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW DATABASES STARTS WITH 'db_test'\""
info: "Setup queries: CREATE DATABASE db_test external_volume = 'test_volume'"
---
Ok(
    [
        "+------------+---------+----------+---------------+-------------+",
        "| created_on | name    | kind     | database_name | schema_name |",
        "+------------+---------+----------+---------------+-------------+",
        "|            | db_test | STANDARD |               |             |",
        "+------------+---------+----------+---------------+-------------+",
    ],
)
