crates/core-executor/src/tests/snapshots/query_create_schema.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW SCHEMAS IN embucket STARTS WITH 'new'\""
info: "Setup queries: CREATE SCHEMA embucket.new_schema; CREATE SCHEMA embucket.\"new schema\""
---
Ok(
    [
        "+------------+------------+------+---------------+-------------+",
        "| created_on | name       | kind | database_name | schema_name |",
        "+------------+------------+------+---------------+-------------+",
        "|            | new schema |      | embucket      |             |",
        "|            | new_schema |      | embucket      |             |",
        "+------------+------------+------+---------------+-------------+",
    ],
)
