crates/core-executor/src/tests/snapshots/query_select_star.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SELECT * FROM employee_table\""
---
Ok(
    [
        "+-------------+------------+------------+---------------+",
        "| employee_id | last_name  | first_name | department_id |",
        "+-------------+------------+------------+---------------+",
        "| 101         | Montgomery | Pat        | 1             |",
        "| 102         | Levine     | Terry      | 2             |",
        "| 103         | Comstock   | Dana       | 2             |",
        "+-------------+------------+------------+---------------+",
    ],
)
