crates/core-executor/src/tests/snapshots/query_show_columns.snap
---
source: crates/core-executor/src/tests/query.rs
description: "\"SHOW COLUMNS\""
snapshot_kind: text
---
Ok(
    [
        "+-------------------+--------------------+-------------------------------+-----------+---------+-------+-------------+------------+---------------+---------------+",
        "| table_name        | schema_name        | column_name                   | data_type | default | null? | kind        | expression | database_name | autoincrement |",
        "+-------------------+--------------------+-------------------------------+-----------+---------+-------+-------------+------------+---------------+---------------+",
        "| columns           | information_schema | character_maximum_length      | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | character_octet_length        | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | column_default                | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | column_name                   | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | column_type                   | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | data_type                     | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | datetime_precision            | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | interval_type                 | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | is_nullable                   | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | numeric_precision             | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | numeric_precision_radix       | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | numeric_scale                 | UInt64    |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | ordinal_position              | UInt64    |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | table_catalog                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | table_name                    | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| columns           | information_schema | table_schema                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| d1                | public             | id                            | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| d1                | public             | name                          | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| d2                | public             | id                            | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| d2                | public             | value                         | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| databases         | information_schema | database_name                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| databases         | information_schema | database_owner                | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| databases         | information_schema | database_type                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| department_table  | public             | department_id                 | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| department_table  | public             | department_name               | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| departments       | public             | department_id                 | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| departments       | public             | name                          | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| df_settings       | information_schema | description                   | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| df_settings       | information_schema | name                          | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| df_settings       | information_schema | value                         | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| employee_table    | public             | department_id                 | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| employee_table    | public             | employee_id                   | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| employee_table    | public             | first_name                    | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| employee_table    | public             | last_name                     | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| employees         | public             | department_id                 | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| employees         | public             | employee_id                   | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| employees         | public             | last_name                     | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| ftable1           | public             | description                   | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| ftable1           | public             | retail_price                  | Float32   |         | YES   | COLUMN      |            | embucket      |               |",
        "| ftable1           | public             | wholesale_cost                | Float32   |         | YES   | COLUMN      |            | embucket      |               |",
        "| leased_bicycles   | public             | bicycle_id                    | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| leased_bicycles   | public             | customer_id                   | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | apr                           | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | dept                          | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | empid                         | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | feb                           | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | jan                           | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| monthly_sales     | public             | mar                           | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| navigation_tree   | information_schema | database                      | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| navigation_tree   | information_schema | schema                        | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| navigation_tree   | information_schema | table                         | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | data_type                     | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | is_variadic                   | Boolean   |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | ordinal_position              | UInt64    |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | parameter_default             | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | parameter_mode                | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | parameter_name                | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | rid                           | UInt8     |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | specific_catalog              | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | specific_name                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| parameters        | information_schema | specific_schema               | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| products          | public             | product_id                    | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| products          | public             | wholesale_price               | Float32   |         | YES   | COLUMN      |            | embucket      |               |",
        "| quarterly_sales   | public             | amount                        | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| quarterly_sales   | public             | empid                         | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| quarterly_sales   | public             | quarter                       | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| returned_bicycles | public             | bicycle_id                    | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| routines          | information_schema | data_type                     | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | description                   | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | function_type                 | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | is_deterministic              | Boolean   |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | routine_catalog               | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | routine_name                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | routine_schema                | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | routine_type                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | specific_catalog              | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | specific_name                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | specific_schema               | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| routines          | information_schema | syntax_example                | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| sales             | public             | city                          | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| sales             | public             | product_id                    | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| sales             | public             | quantity                      | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| sales             | public             | retail_price                  | Float32   |         | YES   | COLUMN      |            | embucket      |               |",
        "| sales             | public             | state                         | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| schemata          | information_schema | catalog_name                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | default_character_set_catalog | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | default_character_set_name    | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | default_character_set_schema  | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | schema_name                   | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | schema_owner                  | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| schemata          | information_schema | sql_path                      | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| source_table      | public             | description                   | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| source_table      | public             | id                            | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| t1                | public             | col1                          | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| t2                | public             | col1                          | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| tables            | information_schema | table_catalog                 | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| tables            | information_schema | table_name                    | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| tables            | information_schema | table_schema                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| tables            | information_schema | table_type                    | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| target_table      | public             | description                   | Utf8      |         | YES   | COLUMN      |            | embucket      |               |",
        "| target_table      | public             | id                            | Int32     |         | YES   | COLUMN      |            | embucket      |               |",
        "| views             | information_schema | definition                    | Utf8      |         | YES   | VIEW_COLUMN |            | embucket      |               |",
        "| views             | information_schema | view_catalog                  | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| views             | information_schema | view_name                     | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| views             | information_schema | view_schema                   | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "| views             | information_schema | view_type                     | Utf8      |         | NO    | VIEW_COLUMN |            | embucket      |               |",
        "+-------------------+--------------------+-------------------------------+-----------+---------+-------+-------------+------------+---------------+---------------+",
    ],
)
